--- a/nginx/nginx.yml
+++ b/nginx/nginx.yml
@@ -3,21 +3,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: nginxfssl
-  name: nginxfssl
+    app: nginx
+  name: nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginxfssl
+      app: nginx
   template:
     metadata:
       labels:
-        app: nginxfssl
+        app: nginx
     spec:
       containers:
       - image: nginxdemos/hello
-        name: nginxfssl
+        name: nginx
         ports:
         - containerPort: 80
           protocol: TCP
@@ -30,14 +30,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginxfssl
+  name: nginx
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
   selector:
-    app: nginxfssl
+    app: nginx
   sessionAffinity: None
   type: ClusterIP
 ---
@@ -53,7 +53,7 @@ spec:
     - match: Host(`nginx.joshlab.home`)
       kind: Rule
       services:
-        - name: nginxfssl
+        - name: nginx
           port: 80
   tls:
     certResolver: letsencrypt
