--- a/nginx/deployment.yml
+++ b/nginx/deployment.yml
@@ -23,9 +23,11 @@ spec:
           protocol: TCP
         resources:
           limits:
-            cpu: 500m
+            cpu: 200m
+            memory: 100Mi
           requests:
             cpu: 200m
+            memory: 100Mi
 ---
 apiVersion: v1
 kind: Service
@@ -44,8 +46,7 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: nginxfssl
-  namespace: default
+  name: nginx
 spec:
   entryPoints:
     - websecure
