--- a/flask-dev-stg-prod/overlays/dev/kustomization.yaml
+++ b/flask-dev-stg-prod/overlays/dev/kustomization.yaml
@@ -10,7 +10,7 @@ patchesJson6902:
 commonLabels:
   app: dev-flask
 namespace: dev
-namePrefix: dev-
+# namePrefix: dev-
 configMapGenerator:
 - name: flask
   behavior: merge
