--- a/flask-dev-stg-prod/base/kustomization.yaml
+++ b/flask-dev-stg-prod/base/kustomization.yaml
@@ -3,8 +3,7 @@ secretGenerator:
   literals:
   - password=josh
 resources:
-  - flask-configmap.yaml
-  - postgresql-configmap.yaml
+  - configmap.yaml
   - postgresql-deployment.yaml
   - flask-deployment.yaml
   - flask-ingress.yaml
