--- a/flask-dev-stg-prod/overlays/dev/kustomization.yaml
+++ b/flask-dev-stg-prod/overlays/dev/kustomization.yaml
@@ -12,7 +12,7 @@ commonLabels:
 namespace: dev
 # namePrefix: dev-
 configMapGenerator:
-- name: flask
+- name: flask-postgres
   behavior: merge
   literals:
   - ENV=dev
