--- a/flask-dev-stg-prod/overlays/prod/kustomization.yaml
+++ b/flask-dev-stg-prod/overlays/prod/kustomization.yaml
@@ -18,7 +18,7 @@ images:
   newTag: latest
 # namePrefix: prod-
 configMapGenerator:
-- name: flask
+- name: flask-postgres
   behavior: merge
   literals:
   - ENV=prod
