--- a/flask-dev-stg-prod/base/configmap.yaml
+++ b/flask-dev-stg-prod/base/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  DB_HOST: flask-postgresql
+  DBHOST: flask-postgresql
   DBNAME: restaurant
   DBUSER: root
 kind: ConfigMap
